# ddsconverter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindGTK3.cmake
doc/: DeveloperColdstart.txt
libddsconvert/: ddsconvert.h
libddsconvert/tests/: CMakeLists.txt
