PROJECT(DDS_CONVERTER)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)

FIND_PACKAGE(GTK3 REQUIRED)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
ADD_DEFINITIONS(${GTK3_DEFINITIONS})


ADD_EXECUTABLE(ddsconverter main.cpp)
TARGET_LINK_LIBRARIES(ddsconverter ${GTK3_LIBRARIES})
